--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,87 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
+*{
+  margin: 0;
+  padding: 0;
 }
+
+a{
+  text-decoration: none;
+  color: #242F51;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 44px;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+.header__block{
+  background-image: url('../images/header_bg.png');
+}
+
+img{
+  transition: all 0.5s ease-out;
+}
+
+img:hover{
+  transform: scale(1.2);
+}
+
+h2{
+  color: #242F51;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 46px;
+  transition: all 0.5s ease-out;
+}
+
+h2:hover{
+  transform: scale(1.2);
+}
+
+p:hover{
+  color: rgb(125, 125, 125);
+  transform: scale(1.2);
+}
+
+h2, p{
+  transition: all 0.5s ease-out;
+}
+
+button{
+  transition: all 0.5s ease-out;
+}
+
+button:hover{
+  background-color: aliceblue;
+  color: rgb(62, 62, 62);
+  border: 1px solid rgb(49, 49, 49);
+}
+
+@import "./blocks/header.scss";
+@import "./blocks/trusted.scss";
+@import "./blocks/features.scss";
+@import "./blocks/jackpot.scss";
+@import "./blocks/preferences.scss";
+@import "./blocks/design.scss";
+@import "./blocks/reasons.scss";
+@import "./blocks/ultimate.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/satisfaction.scss";
+@import "./blocks/question.scss";
+@import "./blocks/download.scss";
+@import "./blocks/footer.scss";
+
+
+
+
+
+
+
+
+
+
+
+
