fix the bugs and finish test task

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,66 +1,5 @@
-*{
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
 
-a{
-  text-decoration: none;
-  color: #242F51;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 44px;
-}
-
-html{
-  scroll-behavior: smooth;
-}
-
-.header__block{
-  background-image: url('../images/header_bg.png');
-}
-
-img{
-  transition: all 0.5s ease-out;
-}
-
-img:hover{
-  transform: scale(1.2);
-}
-
-h2{
-  color: #242F51;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 46px;
-  transition: all 0.5s ease-out;
-}
-
-h2:hover{
-  transform: scale(1.2);
-}
-
-p:hover{
-  color: rgb(125, 125, 125);
-  transform: scale(1.2);
-}
-
-h2, p{
-  transition: all 0.5s ease-out;
-}
-
-button{
-  transition: all 0.5s ease-out;
-}
-
-button:hover{
-  background-color: aliceblue;
-  color: rgb(62, 62, 62);
-  border: 1px solid rgb(49, 49, 49);
-}
-
+@import "./blocks/normalize.scss";
 @import "./blocks/header.scss";
 @import "./blocks/trusted.scss";
 @import "./blocks/features.scss";
